2001-04-19  Clint Adams  <schizo@debian.org>

	* unposted: configure.in: make sure all the libraries are
	in for the function check.

	* 14041: configure.in, Config/defs.mk.in, Src/Makefile.in,
	Src/Modules/cap.mdd, Src/Modules/termcap.mdd,
	Src/Modules/terminfo.mdd, Src/Modules/zftp.mdd:
	only link modules against needed libraries.

	* 14039: configure.in, Config/defs.mk.in, Src/zsh.mdd,
	Src/Modules/cap.mdd, Src/Modules/termcap.mdd,
	Src/Modules/terminfo.mdd, Src/Modules/zftp.mdd:
	simulate old linking behavior.

	* 14033: acconfig.h, aczsh.m4, configure.in, Config/defs.mk.in,
	Src/Makefile.in, Src/mkmakemod.sh, Src/zsh.mdd,
	Src/Modules/cap.mdd, Src/Modules/termcap.mdd,
	Src/Modules/terminfo.mdd: only link modules and main binary
	against needed libraries.

2001-04-19  Sven Wischnowsky  <wischnow@zsh.org>

	* 14028: Src/Zle/complete.mdd: use the right path patterns for
	completion functions

2001-04-19  Clint Adams  <schizo@debian.org>

	* 14018: Src/mkmakemod.sh: honor STRIPFLAGS when installing
	modules.

2001-04-18  Bart Schaefer  <schaefer@zsh.org>

	* 14004 (plus typo fix per Sven 14009): Improve completion in the
	tail of paths with a leading tilde-component, particularly with
	respect to nameddirs.

2001-04-17  Sven Wischnowsky  <wischnow@zsh.org>

	* 13999: Src/Zle/computil.c: only use the exclusion lists of
	options that are not currently being completed, but keep
	options from being completed more than once

	* 13997: Completion/Zsh/Type/_directory_stack: remove
	SUFFIX-handling, it's in _tilde and only needed there

2001-04-14  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Etc/zsh-development-guide: The entire section on hook
	functions was repeated twice; delete one copy.

2001-04-13  Oliver Kiddle  <opk@zsh.org>

	* 13982: Completion/Base/Utility/_multi_parts,
	Completion/Unix/Command/.distfiles, Completion/Unix/Command/_elm,
	Completion/Unix/Command/_mail, Completion/Unix/Command/_mutt,