@@ -1,3 +1,9 @@
+2001-04-19  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>
+
+	* 14046: Doc/Zle/zle.yo, Src/Zle/zle_keymap.c: bindkey -rp removes
+	bindings with given prefix; minor bugfix for length of prefix with
+	bindkey -p.
+
 2001-04-19  Clint Adams  <schizo@debian.org>
 
 	* unposted: configure.in: make sure all the libraries are
